--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-azure-mgmt-resource~=2.0.0rc1
-azure-mgmt-network~=2.0.0rc2
-azure-mgmt-compute~=4.0.0rc2
-azure-mgmt-storage~=2.0.0rc3
+azure-mgmt-resource~=16.1.0
+azure-mgmt-network~=18.0.0
+azure-mgmt-compute~=20.0.0
+azure-mgmt-storage~=17.0.0
+msrestazure
+azure-identity
 haikunator
+python-certifi-win32
